--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.stjepanlukac.prvapomoc">
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -10,7 +12,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"/>
+        <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".UserAreaActivity">
             <intent-filter>
@@ -18,8 +20,29 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+        <activity android:name=".SrcaniInfarkt" />
+        <activity android:name=".MozdaniUdar" />
+        <activity android:name=".Sok" />
+        <activity android:name=".Rane" />
+        <activity android:name=".Krvarenje" />
+        <activity android:name=".UnutarnjeKrvarenje" />
+        <activity android:name=".EpilepticniNapad" />
+        <activity android:name=".Gusenje" />
+        <activity android:name=".Opekline" />
+        <activity android:name=".StrujniUdar" />
+        <activity android:name=".UdarGroma" />
+        <activity android:name=".ToplinskiUdar" />
+        <activity android:name=".Vrucica" />
+        <activity android:name=".Smrzotine" />
+        <activity android:name=".Pothladenost" />
+        <activity android:name=".Prijelomi" />
+        <activity android:name=".OzljedeKraljeznice" />
+        <activity android:name=".AmputacijskeOzljede" />
+        <activity android:name=".BocniPolozaj" />
+        <activity android:name=".Otrovanja" />
+        <activity android:name=".Lokacija"></activity>
+        <activity android:name=".Test"></activity>
     </application>
 
 </manifest>
