--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.stjepanlukac.prvapomoc">
 
-    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -41,8 +41,9 @@
         <activity android:name=".AmputacijskeOzljede" />
         <activity android:name=".BocniPolozaj" />
         <activity android:name=".Otrovanja" />
-        <activity android:name=".Lokacija"></activity>
-        <activity android:name=".Test"></activity>
+        <activity android:name=".Lokacija" />
+        <activity android:name=".Dohvati_User_Data" />
+        <activity android:name=".Posalji_User_Data"></activity>
     </application>
 
 </manifest>
